objects/ASI_TH_CRM_Payment_Status__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Status (Customer)</relationshipLabel>
        <relationshipName>Payment_Status1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gross_Amount__c</fullName>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Document_No__c</fullName>
        <label>JDE Document Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay To</label>
        <referenceTo>ASI_CRM_Pay_To__c</referenceTo>
        <relationshipLabel>Payment Histories</relationshipLabel>
        <relationshipName>Payment_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>ASI_TH_CRM_PaymentRequest__c</referenceTo>
        <relationshipLabel>Payment Status</relationshipLabel>
        <relationshipName>Payment_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Taxable_Amount__c</fullName>
        <label>Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Voucher_No__c</fullName>
        <label>Voucher No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Voucher_Type__c</fullName>
        <label>Voucher Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Histories (Supplier)</relationshipLabel>
        <relationshipName>Payment_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Gross_Amount__c</fullName>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Status</relationshipLabel>
        <relationshipName>Payment_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Payment_Status_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Payment Status External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Outlet__c</columns>
        <columns>ASI_TH_CRM_Gross_Amount__c</columns>
        <columns>ASI_TH_CRM_Payment_Amount__c</columns>
        <columns>ASI_TH_CRM_Payment_Date__c</columns>
        <columns>ASI_TH_CRM_Payment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_On_Premise_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Invoice No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Status</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Payment_Status</fullName>
        <active>true</active>
        <label>JP Payment Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Payment_Status</fullName>
        <active>true</active>
        <label>ASI TH CRM Payment Status</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>